# test-task-stroy

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: crud.py  database.py  main.py  models.py  schemas.py
app/routers/: categories.py  products.py
tests/: conftest.py  test_categories.py  test_products.py
