[tool.poetry]
name = "test-task-stroy"
version = "0.1.0"
description = ""
authors = ["qu1ck <Glebkraykin@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = "^0.31.1"
sqlalchemy = "^2.0.35"
databases = "^0.9.0"
psycopg = "^3.2.3"
psycopg2-binary = "^2.9.9"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
